# apps/api/src/app/auth/dto/auth-response.dto.ts
@@ -3,5 +3,6 @@ import { UserResponseDto } from '../../users/dto/user-response.dto';
 
 export class AuthResponseDto {
   @ApiProperty() accessToken!: string;
+  @ApiProperty() refreshToken!: string;
   @ApiProperty({ type: UserResponseDto }) user!: UserResponseDto;
 }
