# apps/api/src/app/auth/dto/reset-password.dto.ts
@@ -1,0 +1,7 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, MinLength } from 'class-validator';
+
+export class ResetPasswordDto {
+  @ApiProperty() @IsString() token!: string;
+  @ApiProperty() @IsString() @MinLength(8) newPassword!: string;
+}
